# uni_study_app

./:  SUPABASE_TESTING_GUIDE.md  .env  .env.development  .env.production  .gitignore  AI_COMPONENTS_README.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  FINAL_STATUS.md  PROJECT_REPORT.md  README.md  Supabase implementataion.md  TESTING_REPORT.md  find_unused_all.js  index.html  nodephase.md  optimization.md  optimization_v2.md  package-lock.json  package.json  pwa_implementation_summary.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
coverage/: index.html
coverage/contexts/: ThemeContext.tsx.html  index.html
coverage/lib/: index.html  (+3 more)
features and plans/: databaseImplementationPlan.md  db_step1_progress.md  db_step2_progress.md  db_step3_progress.md  future_plans.md  project_overview.md  redesign_suggestions.md
grading implementation plan/: 00_START_HERE.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  FLEXIBLE_GRADING_IMPLEMENTATION_PLAN.md  GRADING_DEV_QUICKSTART.md  GRADING_SYSTEM_DOCS_INDEX.md  GRADING_SYSTEM_STATUS.md  IMPLEMENTATION_CHECKLIST.md
public/: manifest.json  offline.html  sw.js
src/: App.tsx  index.css  main.tsx  test-invoke.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AddResourcePayload.ts  ChatResult.ts  DeviceIdentity.ts  DeviceRegistration.ts  EncryptionStatus.ts  FinanceAsset.ts  FinanceSummary.ts  Flashcard.ts  Lecture.ts  Link.ts  LinkType.ts  MigrationConflict.ts  MigrationEligibility.ts  MigrationProgress.ts  OnboardingState.ts  Repository.ts  Resource.ts  SavingsGoal.ts  StudySession.ts  SyncState.ts  UserPublic.ts
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_add_planner_events.sql  0003_add_metrics_and_onboarding.sql  0004_fix_onboarding_schema.sql  0005_fix_missing_repository_columns.sql  0006_auth.sql  0006_profile_auth.sql  0007_node_system_enhancements.sql  0008_grades_projection.sql  0010_flexible_grading_schema.sql  0011_add_flashcards.sql  0013_fix_llm_settings_columns.sql  0014_add_finance_tracking.sql  0015_add_study_stats.sql  0016_enhance_lectures.sql  0016_migrate_course_to_repository.sql  0017_add_book_library.sql  0018_add_graph_settings.sql  0019_add_missing_graph_settings.sql  0020_add_indexes.sql  0021_supabase_sync_init.sql  0022_sqlcipher_encryption.sql  0023_fix_device_identity_columns.sql  0024_migration_system.sql  0025_streamline_onboarding.sql  0026_fix_onboarding_migration.sql  0027_clean_onboarding_fix.sql  global_0001_init.sql  supabase_schema.sql
src-tauri/scripts/: generate-bindings.bat
src-tauri/src/: book_commands.rs  conversion.rs  db.rs  db_manager.rs  finance.rs  grades.rs  image_tools.rs  inference.rs  lib.rs  main.rs  migrations.rs  ollama.rs  pdf_tools.rs  projection.rs  sync.rs  youtube.rs
src-tauri/src/db/: d_days.rs  flashcards.rs  graph.rs  lectures.rs  links.rs  mod.rs  planner.rs  repositories.rs  resources.rs  study_sessions.rs  tasks.rs
(+239 files in other folders)
