[package]
name = "uni_study_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uni_study_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
parking_lot = "0.12"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"

lopdf = "0.38.0"
image = "0.25"
oxipng = "10"

# llama.cpp bindings
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", branch = "main" }
llama-cpp-sys-2 = { git = "https://github.com/utilityai/llama-cpp-rs", branch = "main" }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10.0.0", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
thiserror = "1.0"
validator = { version = "0.19", features = ["derive"] }


